# Vision_based_Navigation_TTT

./: CMakeLists.txt  LICENSE  Quickstart.md  README.md  package.xml
GazeboWorlds/: L_corridor.world  bridge_tree_2.world  corridor.world  corridor_2.world  corridor_L.world  corridor_L_2.world  house_garden_3.world  one_wall_2.world  realistic.world  realistic_world.world  realistic_world_1.world  realistic_world_succ.world  realsitic_world_1.world  realsitic_world_succ.world  straight_corridor.world  trial.world
launch/: jackal_world.launch  realsense_jackal_realistic.launch  spawn_jackal.launch
models/1_stack_for_curve/: model.config  model.sdf
models/L-corridor_curve_real/: model.config  model.sdf
models/L-corridor_curve_real _side1/: model.config  model.sdf
models/L-corridor_curve_real _side1/meshes/: exact_green_circle_border.dae  exact_red_circle_border.dae
models/L-corridor_curve_real _side1_1/: model.config  model.sdf
models/L-corridor_curve_real _side1_2/: model.config  model.sdf
models/L-corridor_curve_real_side2_1/: model.config  model.sdf
models/L-corridor_curve_real_side2_2/: model.config  model.sdf
models/L-corridor_curve_real_side2_2/meshes/: exact_blue_circle_border.dae
models/boxes_1/: model.config  model.sdf
models/boxes_1/meshes/: green_circle_border.dae
models/boxes_2/: model.config  model.sdf
models/boxes_2/meshes/: blue_circle_border.dae
models/boxes_3/: model.config  model.sdf
models/boxes_Lcorridor/: model.config  model.sdf
models/boxes_Lcorridor/meshes/: red_circle_border.dae
models/boxes_corridor/: model.config  model.sdf
msg/: Control.msg  OpticalFlow.msg  TauComputation.msg  TauValuesMsg.msg
nodes/: controller.py  optical_flow.py  tau_computation.py
scripts/: Bernoulli_Textures.py
urdf/: BU_Jackal.urdf.xacro  README.md  realsense.urdf.xacro
